@@ -161,18 +161,18 @@ public class CommentServiceImpl implements CommentService {
         CommentTree commentTree = buildCommentTree(comment, 0L, -1L);
 
         try {
-            //注释Redis
+            //1注释Redis
             // 如果不是根级评论，则加入 redis 对应的 zset 中
-            /*if (!rootId.equals(0)) {
+            if (!rootId.equals(0)) {
                 redisUtil.zset("comment_reply:" + rootId, comment.getCid());
             } else {
                 redisUtil.zset("comment_video:"+ vid, comment.getCid());
-            }*/
+            }
             // 表示被回复的用户收到的回复评论的 cid 有序集合
             // 如果不是回复自己
             if(!comment.getToUserId().equals(comment.getUid())) {
-                //注释Redis
-                //redisUtil.zset("reply_zset:" + comment.getToUserId(), comment.getCid());
+                //1注释Redis
+                redisUtil.zset("reply_zset:" + comment.getToUserId(), comment.getCid());
                 msgUnreadService.addOneUnread(comment.getToUserId(), "reply");
 
                 // 通知未读消息
@@ -230,13 +230,13 @@ public class CommentServiceImpl implements CommentService {
                         childResponse = deleteComment(childComment.getCid(),uid,true);
                         return Stream.of(childResponse);
                     }
-            ).collect(Collectors.toList());
+            ).toList();
 
-            //注释Redis
+            //1注释Redis
             /*
              如果该评论是根节点评论，则删掉其所有回复。
              如果不是根节点评论，则将他所在的 comment_reply(zset) 中的 comment_id 删掉
-             *//*
+             */
             if (comment.getRootId()==0) {
                 // 查询总共要减少多少评论数
                 int count = Math.toIntExact(redisUtil.zCard("comment_reply:" + comment.getCid()));
@@ -246,7 +246,7 @@ public class CommentServiceImpl implements CommentService {
             } else {
                 videoStatusService.updateVideoStatus(comment.getVid(), "comment", false, 1);
                 redisUtil.zsetDelMember("comment_reply:" + comment.getRootId(), comment.getCid());
-            }*/
+            }
 
             responseResult.setCode(200);
             responseResult.setMessage("删除成功!");
@@ -265,12 +265,12 @@ public class CommentServiceImpl implements CommentService {
      */
     @Override
     public List<Comment> getChildCommentsByRootId(Integer rootId, Long start, Long end) {
-        //注释Redis
-        /*Set<Object> replyIds = redisUtil.zRange("comment_reply:" + rootId, start, end);
+        //1注释Redis
+        Set<Object> replyIds = redisUtil.zRange("comment_reply:" + rootId, start, end);
         if (replyIds == null || replyIds.isEmpty()) return Collections.emptyList();
         QueryWrapper<Comment> wrapper = new QueryWrapper<>();
         wrapper.in("bid", replyIds).ne("is_deleted", 1);
-        return commentMapper.selectList(wrapper);*/
+        //return commentMapper.selectList(wrapper);
         if(end.equals(-1L)){
             return commentMapper.getRootCommentByStartNoLimit(rootId, start);
         }
@@ -287,8 +287,8 @@ public class CommentServiceImpl implements CommentService {
      */
     @Override
     public List<Comment> getRootCommentsByVid(Integer vid, Long offset, Integer sortType) {
-        //注释Redis
-        /*Set<Object> rootIdsSet;
+        //1注释Redis
+        Set<Object> rootIdsSet;
         if (sortType == 1) {
             // 按热度排序就不能用时间分数查偏移量了，要全部查出来，后续在MySQL筛选
             rootIdsSet = redisUtil.zReverange("comment_video:" + vid, 0L, -1L);
@@ -305,7 +305,7 @@ public class CommentServiceImpl implements CommentService {
         } else if(sortType == 2){ // 时间
             commentQueryWrapper.orderByDesc("create_time");
         }
-        return commentMapper.selectList(commentQueryWrapper);*/
+        //return commentMapper.selectList(commentQueryWrapper);
         if(sortType == 1) return commentMapper.getVidRootCommentsByHeat(vid,offset,10L);
         else if (sortType == 2) return commentMapper.getVidRootCommentsByTime(vid,offset,10L);
         else return Collections.emptyList();
